--- a/index.html
+++ b/index.html
@@ -31,15 +31,12 @@
 <body ng-controller="ApplicationCtrl as vm" md-theme="{{themePrimary}}" md-theme-watch="true" layout="row" ng-cloak>
 
 <!-- Livereload script for development only (stripped during dist build) -->
-<script src="http://localhost:35729/livereload.js" data-concat="false"></script>
-<script src="bower_components/jquery/jquery.js"></script>
-<script src="bower_components/jquery-ui/ui/jquery.ui.core.js"></script>
-<script src="bower_components/jquery-ui/ui/jquery.ui.widget.js"></script>
-<script src="bower_components/jquery-ui/ui/jquery.ui.mouse.js"></script>
-<script src="bower_components/jquery-ui/ui/jquery.ui.sortable.js"></script>
+<script src="http://localhost:35729/livereload.js" data-build="exclude"></script>
+<script src="bower_components/jquery/dist/jquery.min.js"></script>
+<script src="bower_components/Sortable/Sortable.min.js"></script>
 
 <!-- JS from Bower Components -->
-<script src="bower_components/less.js/dist/less.min.js" data-concat="false"></script>
+<script src="bower_components/less.js/dist/less.min.js" data-build="exclude"></script>
 <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 <script src="bower_components/underscore/underscore.js"></script>
 <script src="bower_components/moment/moment.js"></script>
